--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Google OAuth
-DRIVE_BASE_URL="https://www.example.com:3000"
-CLIENT_ID="xyz.apps.googleusercontent.com"
-CLIENT_SECRET="abc"
+DRIVE_BASE_URL="https://drive.google.com/drive/u/0/folders/0AAV_g1FuA6ocUk9PVA"
+CLIENT_ID="777280094863-e0ad1mc22e1obf4puakvn57hkrc9uaqc.apps.googleusercontent.com"
+CLIENT_SECRET="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"
 OAUTH_REDIRECT="/authenticate/google"
 
 # Server
